--- a/user/css/index.css
+++ b/user/css/index.css
@@ -106,3 +106,12 @@ body {
     }
   }
 /* end of carousel */
+
+
+.back-to-top {
+  position: fixed;
+  display: none;
+  right: 45px;
+  bottom: 45px;
+  z-index: 99;
+}
