--- a/user/css/booking.css
+++ b/user/css/booking.css
@@ -4,6 +4,8 @@
     --secondary-blue: #4285f4;
     --accent-orange: #ff9e40;
     --body: #516171;
+    --brand: #0886ee;
+   --shadow: 0px 6px 30px rgba(0, 0, 0, 0.08);
 }
 
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
@@ -175,3 +177,46 @@ body {
     margin-right: 0.5rem;
     color: var(--primary-blue);
 }
+
+
+ /* navbar */
+ .top-nav {
+    background-color: var(--brand);
+    color: #fff;
+    padding-top: 5px;
+    padding-bottom: 5px;
+}
+
+.top-nav p {
+    display: inline-block;
+    margin-bottom: 0;
+    margin-right: 10px;
+}
+
+.top-nav span,
+.top-nav i {
+    vertical-align: middle;
+}
+
+.navbar {
+    box-shadow: var(--shadow);
+}
+
+.social-icons a {
+    width: 28px;
+    height: 28px;
+    display: inline-flex;
+    color: #ffffff;
+    background-color: orange;
+    text-decoration: none;
+    align-items: center;
+    justify-content: center;
+    border-radius: 100px;
+}
+
+.social-icons a:hover {
+    background-color: #fff;
+    color: var(--brand);
+}
+
+
