--- a/user/css/index.css
+++ b/user/css/index.css
@@ -1,181 +1,176 @@
 :root {
-    --brand: #0886ee;
-    --dark: #092032;
-    --body: #516171;
-    --border: rgba(0,0,0,0.08);
-    --shadow: 0px 6px 30px rgba(0, 0, 0, 0.08);
-    --accent-orange: #ff6f00;
-            --light-orange: #ff9e40;
-    
+  --brand: #0886ee;
+  --dark: #092032;
+  --body: #516171;
+  --border: rgba(0, 0, 0, 0.08);
+  --shadow: 0px 6px 30px rgba(0, 0, 0, 0.08);
+  --accent-orange: #ff6f00;
+  --light-orange: #ff9e40;
+
 }
+
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
 
 body {
-    font-family: 'Poppins', sans-serif;
-    color: var(--body);
-    line-height: 1.7;
+  font-family: 'Poppins', sans-serif;
+  color: var(--body);
+  line-height: 1.7;
 }
 
 
-        /* navbar */
+/* navbar */
 .top-nav {
-    background-color: var(--brand);
-    color: #fff;
-    padding-top: 5px;
-    padding-bottom: 5px;
+  background-color: var(--brand);
+  color: #fff;
+  padding-top: 5px;
+  padding-bottom: 5px;
 }
 
 .top-nav p {
-    display: inline-block;
-    margin-bottom: 0;
-    margin-right: 10px;
+  display: inline-block;
+  margin-bottom: 0;
+  margin-right: 10px;
 }
 
 .top-nav span,
 .top-nav i {
-    vertical-align: middle;
+  vertical-align: middle;
 }
 
 .navbar {
-    box-shadow: var(--shadow);
+  box-shadow: var(--shadow);
 }
 
 .social-icons a {
-    width: 28px;
-    height: 28px;
-    display: inline-flex;
-    color: #ffffff;
-    background-color: orange;
-    text-decoration: none;
-    align-items: center;
-    justify-content: center;
-    border-radius: 100px;
+  width: 28px;
+  height: 28px;
+  display: inline-flex;
+  color: #ffffff;
+  background-color: orange;
+  text-decoration: none;
+  align-items: center;
+  justify-content: center;
+  border-radius: 100px;
 }
 
 .social-icons a:hover {
-    background-color: #fff;
-    color: var(--brand);
+  background-color: #fff;
+  color: var(--brand);
 }
 
 
 /* for carousel */
 .btn-brand {
-    background-color: #007bff; /* Change to your desired color */
-    color: #fff;
-    border: none;
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-weight: bold;
-    text-transform: uppercase;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-  }
-  
-  .btn-brand:hover {
-    background-color: #0056b3; /* Darker shade for hover effect */
-    transform: scale(1.05);
-    color: #fff; /* Ensures text remains visible */
-  }
-  
-  .btn-brand:focus {
-    outline: none;
-    box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.5);
-  }
+  background-color: #007bff;
+  /* Change to your desired color */
+  color: #fff;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
 
-  .btn-signup {
-    background-color: none; /* Change to your desired color */
-    color: gray;
-    border-color: var(--light-orange);
-    padding: 10px 20px;
-    border-radius: 5px;
-    font-weight: bold;
-    text-transform: uppercase;
-    transition: background-color 0.3s ease, transform 0.3s ease;
-  }
-  
-  .btn-signup:hover {
-    background-color: var(--light-orange); /* Darker shade for hover effect */
-    transform: scale(1.05);
-    color: #fff; /* Ensures text remains visible */
-  }
-  
-  .btn-signup:focus {
-    outline: none;
-    box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.5);
-  }
+.btn-brand:hover {
+  background-color: #0056b3;
+  /* Darker shade for hover effect */
+  transform: scale(1.05);
+  color: #fff;
+  /* Ensures text remains visible */
+}
 
-  .btn-secondary1 {
-    background-color: var(--light-orange); /* Change to your desired color */
-    color: whitesmoke;
-   border: none;
-   flex: 1;
-   
-    
-    
-    
-  }
+.btn-brand:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.5);
+}
 
-  .btn-primary1 {
-    
-   border: none;
-   flex: 1;
-   
-    
-    
-    
-  }
-  
-  
-  .btn-secondary1:hover {
-    background-color: var(--light-orange); /* Darker shade for hover effect */
-    transform: scale(1.05);
-    color: #fff; /* Ensures text remains visible */
-  }
-  
- 
-  
-  
-      /* CUSTOMIZE THE CAROUSEL
+.btn-signup {
+  background-color: none;
+  /* Change to your desired color */
+  color: gray;
+  border-color: var(--light-orange);
+  padding: 10px 20px;
+  border-radius: 5px;
+  font-weight: bold;
+  text-transform: uppercase;
+  transition: background-color 0.3s ease, transform 0.3s ease;
+}
+
+.btn-signup:hover {
+  background-color: var(--light-orange);
+  /* Darker shade for hover effect */
+  transform: scale(1.05);
+  color: #fff;
+  /* Ensures text remains visible */
+}
+
+.btn-signup:focus {
+  outline: none;
+  box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.5);
+}
+
+. .btn-primary1 {
+
+  border: none;
+  flex: 1;
+
+
+
+
+}
+
+
+
+
+
+
+
+/* CUSTOMIZE THE CAROUSEL
   -------------------------------------------------- */
-  
-  /* Carousel base class */
-  .carousel {
-    margin-bottom: 4rem;
-  }
-  /* Since positioning the image, we need to help out the caption */
+
+/* Carousel base class */
+.carousel {
+  margin-bottom: 4rem;
+}
+
+/* Since positioning the image, we need to help out the caption */
+.carousel-caption {
+  padding: 70px;
+  font-weight: 500;
+  z-index: 100;
+}
+
+@media (max-width: 767px) {
   .carousel-caption {
-    padding: 70px;
-    font-weight: 500;
-    z-index: 100;
+    padding: 30px;
   }
+}
 
-  @media (max-width: 767px) {
-    .carousel-caption {
-      padding: 30px;
-    }
+@media (min-width: 768px) {
+  .carousel-caption {
+    padding: 50px 70px;
   }
+}
 
-  @media (min-width: 768px) {
-    .carousel-caption {
-      padding: 50px 70px;
-    }
-  }
 
- 
-  
-  /* Declare heights because of positioning of img element */
-  .carousel-item {
-    height: 32rem;
+
+/* Declare heights because of positioning of img element */
+.carousel-item {
+  height: 32rem;
+}
+
+@media (min-width: 40em) {
+
+  /* Bump up size of carousel content */
+  .carousel-caption p {
+    margin-bottom: 1.25rem;
+    font-size: 1.25rem;
+    line-height: 1.4;
   }
-  
-  @media (min-width: 40em) {
-    /* Bump up size of carousel content */
-    .carousel-caption p {
-      margin-bottom: 1.25rem;
-      font-size: 1.25rem;
-      line-height: 1.4;
-    }
-  }
+}
+
 /* end of carousel */
 
 
@@ -218,13 +213,15 @@ body {
 
 /* map design */
 .map-container {
-  height: 370px; /* Set to your desired height */
+  height: 370px;
+  /* Set to your desired height */
 }
 
 
 /* rooms styles */
 .room-amenity {
-  color: #0d6efd;  /* Bootstrap primary blue */
+  color: #0d6efd;
+  /* Bootstrap primary blue */
   font-size: 0.9rem;
 }
 
@@ -256,73 +253,79 @@ body {
 .card:hover {
   transform: translateY(-5px);
 }
+
 /* end of room styles */
 
 
 
 /* Gallery slider start */
 
-.intro {margin-bottom: 36px;
-  text-align: center;}
-  
-  .intro p {
-      max-width: 500px;
-  }
-  .intro h6{
-      color: var(--brand);
-      font-weight: 400;
-      text-transform: uppercase;
-  }
-  
-  .intro h1 {
-      margin-top: 15px;
-      margin-bottom: 15px;
-  }
+.intro {
+  margin-bottom: 36px;
+  text-align: center;
+}
 
-  .project {
-    position: relative;
-    overflow: hidden;
-    z-index: 2;
+.intro p {
+  max-width: 500px;
+}
+
+.intro h6 {
+  color: var(--brand);
+  font-weight: 400;
+  text-transform: uppercase;
+}
+
+.intro h1 {
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+.project {
+  position: relative;
+  overflow: hidden;
+  z-index: 2;
 }
 
 .project h6 {
-    font-weight: 400;
+  font-weight: 400;
 }
 
 .project h6::before {
-    content: "";
-    height: 2px;
-    width: 30px;
-    display: inline-block;
-    background: var(--brand);
-    vertical-align: middle;
-    margin-right: 10px;
+  content: "";
+  height: 2px;
+  width: 30px;
+  display: inline-block;
+  background: var(--brand);
+  vertical-align: middle;
+  margin-right: 10px;
 }
 
 
 .project .overlay {
-    width: 100%;
-    height: 220px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    background: linear-gradient(180deg, rgba(255, 76, 41, 0) 0%, var(--dark) 100%);
+  width: 100%;
+  height: 220px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  background: linear-gradient(180deg, rgba(255, 76, 41, 0) 0%, var(--dark) 100%);
 }
 
 .project .content {
-    position: absolute;
-    left: 10%;
-    bottom: 10%
+  position: absolute;
+  left: 10%;
+  bottom: 10%
 }
 
 .project h2,
 .project h6 {
-    color: #fff;
+  color: #fff;
 }
 
 #projects-slider .project img {
-  height: 400px; /* Set the desired height */
-  object-fit: cover; /* Maintains aspect ratio while covering the area */
+  height: 400px;
+  /* Set the desired height */
+  object-fit: cover;
+  /* Maintains aspect ratio while covering the area */
 }
 
 /* gallery slider end */
@@ -332,7 +335,7 @@ body {
 .hero-section {
   padding: 50px 0;
   background-color: #f8f9fa;
-  
+
 }
 
 .hero-content h1 {
@@ -360,6 +363,7 @@ body {
   min-height: 315px;
   box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
+
 /* video end */
 
 
@@ -400,6 +404,7 @@ body {
   display: inline-block;
   transition: 0.5s;
 }
+
 .social-icon__link:hover {
   transform: translateY(-10px);
 }
@@ -468,6 +473,7 @@ body {
   0% {
     background-position-x: 1000px;
   }
+
   100% {
     background-positon-x: 0px;
   }
@@ -477,6 +483,7 @@ body {
   0% {
     background-position-x: -1000px;
   }
+
   100% {
     background-positon-x: 0px;
   }
