--- a/user/css/index.css
+++ b/user/css/index.css
@@ -111,18 +111,11 @@ body {
   box-shadow: 0 0 0 4px rgba(0, 123, 255, 0.5);
 }
 
-. .btn-primary1 {
-
-  border: none;
-  flex: 1;
-
-
-
-
+.same-size-btn {
+  width: 200px;
+  /* Adjust the width as needed */
+  height: 45px;
 }
-
-
-
 
 
 
